# autrado-bot-S-v1

./: README.md  USAGE.md  analyze_strategies.py  main.py  main_app.py  pyproject.toml  requirements.txt  test_results.txt
backtesting/: backtesting_bot.py  multi_strategy_app.py  multilang_app.py  run_gui.py  streamlit_app.py
config/: .env.example  config.py
docs/: setup_guide.md  setup_instructions.md  trading_system_guide.md
live_trading/: live_trading_bot.py  real_time_signal_example.py  run_monitor.py
pages/: 1_📊_Backtesting.py  2_📈_Monitoring_Dashboard.py  3_⚙️_Settings.py
strategies/: __init__.py  active_strategies.py  base.py  enhanced_strategies.py  strategies.py  ultra_short_strategies.py
utils/: data_provider.py  monitoring_storage.py
